Permanently fix jitters across all platforms - use no-scroll only on IOS (#6471)

--- a/extensions/amp-carousel/0.1/amp-carousel.css
+++ b/extensions/amp-carousel/0.1/amp-carousel.css
@@ -119,7 +119,7 @@ amp-carousel .amp-carousel-button.amp-disabled {
 }
 
 /** Only hide scroll bar for touch devices as it causes jitters on desktops */
-.amp-mode-touch .-amp-slides-container.-amp-no-scroll {
+.-amp-slides-container.-amp-no-scroll {
   overflow-x: hidden !important;
 }
 
